rule template are not used by FE in task api, remove it
