# sqle/docs/swagger.json
@@ -1819,12 +1819,6 @@
                 "pass_rate": {
                     "type": "number"
                 },
-                "rule_template_name_list": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "status": {
                     "type": "string",
                     "enum": [
